# CPP_zia_2018

./: .gitignore  conanfile.txt  server_config.json
module/: CMakeLists.txt
module/DeflateZipper/: CMakeLists.txt
module/DeflateZipper/src/: ModuleDeflateZipper.cpp
module/GZipper/: CMakeLists.txt
module/GZipper/src/: GZipper.cpp
module/php/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
module/php/src/: php.cpp
module/ssl/: CMakeLists.txt
module/ssl/inc/: SSLConnection.hpp  ssl.hpp
module/ssl/src/: SSLConnection.cpp  ssl.cpp
solution/: CMakeLists.txt
solution/inc/DLLoader/: DynamicLibrary.hpp
solution/inc/default_module/: DefaultReader.hpp  ModuleDefaultPage.hpp  ModuleHttpHeader.hpp  ModuleHttpRequestParser.hpp  ModuleHttpResponseParser.hpp  ModuleHttpService.hpp  ModuleReader.hpp
solution/inc/dlloader/: IDynamicLibrary.hpp  ModulesManager.hpp
solution/inc/server/: ConfigManager.hpp  Headers.hpp  Request.hpp  Server.hpp
solution/src/: main.cpp
solution/src/DLLoader/: DynamicLibrary.cpp
solution/src/default_module/: DefaultReader.cpp  ModuleContextConverter.cpp  ModuleDefaultPage.cpp  ModuleHttpHeader.cpp  ModuleHttpRequestParser.cpp  ModuleHttpResponseParser.cpp  ModuleHttpService.cpp  ModuleReader.cpp  ModuleWriter.cpp
solution/src/dlloader/: ModulesManager.cpp
solution/src/dlloader/linux/: DynamicLibrary.cpp
solution/src/dlloader/windows/: DynamicLibrary.cpp
solution/src/server/: Headers.cpp  Request.cpp  ShellServer.cpp
solution/src/serveur/: CodeStatus.cpp  ConfigManager.cpp  Request.cpp  Server.cpp  ShellServer.cpp
